--- a/linear norm plot.Rmd
+++ b/linear norm plot.Rmd
@@ -364,13 +364,29 @@ qr_s<-c(Reduce("+",re_40_p_l[[11]])[3]/iter,Reduce("+",re_120_p_l[[11]])[3]/iter
 cf_s<-c(Reduce("+",re_40_p_l[[12]])[3]/iter,Reduce("+",re_120_p_l[[12]])[3]/iter
          ,Reduce("+",re_480_p_l[[12]])[3]/iter,Reduce("+",re_1200_p_l[[12]])[3]/iter
          ,Reduce("+",re_4800_p_l[[12]])[3]/iter)
+dgp_f<-c(Reduce("+",re_40_p_l[[9]])[4]/iter,Reduce("+",re_120_p_l[[9]])[4]/iter
+         ,Reduce("+",re_480_p_l[[9]])[4]/iter,Reduce("+",re_1200_p_l[[9]])[4]/iter
+         ,Reduce("+",re_4800_p_l[[9]])[4]/iter)
+dj_f<-c(Reduce("+",re_40_p_l[[10]])[4]/iter,Reduce("+",re_120_p_l[[10]])[4]/iter
+         ,Reduce("+",re_480_p_l[[10]])[4]/iter,Reduce("+",re_1200_p_l[[10]])[4]/iter
+         ,Reduce("+",re_4800_p_l[[10]])[4]/iter)
+qr_f<-c(Reduce("+",re_40_p_l[[11]])[4]/iter,Reduce("+",re_120_p_l[[11]])[4]/iter
+         ,Reduce("+",re_480_p_l[[11]])[4]/iter,Reduce("+",re_1200_p_l[[11]])[4]/iter
+         ,Reduce("+",re_4800_p_l[[11]])[4]/iter)
+cf_f<-c(Reduce("+",re_40_p_l[[12]])[4]/iter,Reduce("+",re_120_p_l[[12]])[4]/iter
+         ,Reduce("+",re_480_p_l[[12]])[4]/iter,Reduce("+",re_1200_p_l[[12]])[4]/iter
+         ,Reduce("+",re_4800_p_l[[12]])[4]/iter)
 df<-data.frame(c('40','120','480','1200','4800'),
                percent(dgp_p,accuracy = 0.01),percent(dj_p,accuracy = 0.01)
                ,percent(qr_p,accuracy = 0.01),percent(cf_p,accuracy = 0.01)
-               ,round(dgp_s,3),round(dj_s,3),round(qr_s,3),round(cf_s,3))
-colnames(df)<-c('Data size','DGP','disjoint','quantile','proposed','DGP','disjoint','quantile','proposed')
+               ,round(dgp_s,3),round(dj_s,3),round(qr_s,3),round(cf_s,3)
+               ,percent(dgp_f,accuracy = 0.01),percent(dj_f,accuracy = 0.01)
+               ,percent(qr_f,accuracy = 0.01),percent(cf_f,accuracy = 0.01))
+colnames(df)<-c('Data size','DGP','disjoint','quantile','proposed','DGP','disjoint','quantile','proposed'
+                ,'DGP','disjoint','quantile','proposed')
 kable(df,'latex', booktabs = T,caption = 'Size effect (q=30%)',align = 'c') %>% 
-        add_header_above(c(" ", "Percentage profit loss" = 4, "Average service level" = 4),bold = T) %>%
+        add_header_above(c(" ", "Percentage profit loss" = 4, "Average service level" = 4
+                           , "Fill rate" = 4),bold = T) %>%
         kable_styling(latex_options = "scale_down")
 ```
 
