--- a/linear-norm-plot.tex
+++ b/linear-norm-plot.tex
@@ -163,17 +163,17 @@ Target service level & DGP & disjoint & quantile & proposed\\
 
 \textbackslash caption\{\label{tab:size0.3}Size effect (q=30\%)\}
 \centering \resizebox{\linewidth}{!}{
-\begin{tabular}[t]{ccccccccc}
+\begin{tabular}[t]{ccccccccccccc}
 \toprule
-\multicolumn{1}{c}{\textbf{ }} & \multicolumn{4}{c}{\textbf{Percentage profit loss}} & \multicolumn{4}{c}{\textbf{Average service level}} \\
-\cmidrule(l{3pt}r{3pt}){2-5} \cmidrule(l{3pt}r{3pt}){6-9}
-Data size & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed\\
+\multicolumn{1}{c}{\textbf{ }} & \multicolumn{4}{c}{\textbf{Percentage profit loss}} & \multicolumn{4}{c}{\textbf{Average service level}} & \multicolumn{4}{c}{\textbf{Fill rate}} \\
+\cmidrule(l{3pt}r{3pt}){2-5} \cmidrule(l{3pt}r{3pt}){6-9} \cmidrule(l{3pt}r{3pt}){10-13}
+Data size & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed\\
 \midrule
-40 & 5.10\% & 5.63\% & 6.08\% & 5.92\% & 0.247 & 0.245 & 0.326 & 0.333\\
-120 & 5.14\% & 5.38\% & 5.48\% & 5.46\% & 0.282 & 0.275 & 0.307 & 0.313\\
-480 & 5.13\% & 5.25\% & 5.25\% & 5.26\% & 0.291 & 0.290 & 0.297 & 0.301\\
-1200 & 5.07\% & 5.16\% & 5.16\% & 5.19\% & 0.297 & 0.294 & 0.298 & 0.302\\
-4800 & 5.18\% & 5.19\% & 5.25\% & 5.27\% & 0.298 & 0.296 & 0.299 & 0.302\\
+40 & 5.10\% & 5.63\% & 6.08\% & 5.92\% & 0.247 & 0.245 & 0.326 & 0.333 & 89.53\% & 88.05\% & 90.04\% & 90.76\%\\
+120 & 5.14\% & 5.38\% & 5.48\% & 5.46\% & 0.282 & 0.275 & 0.307 & 0.313 & 90.62\% & 89.68\% & 90.71\% & 91.04\%\\
+480 & 5.13\% & 5.25\% & 5.25\% & 5.26\% & 0.291 & 0.290 & 0.297 & 0.301 & 90.92\% & 90.52\% & 90.87\% & 91.04\%\\
+1200 & 5.07\% & 5.16\% & 5.16\% & 5.19\% & 0.297 & 0.294 & 0.298 & 0.302 & 91.06\% & 90.75\% & 90.97\% & 91.11\%\\
+4800 & 5.18\% & 5.19\% & 5.25\% & 5.27\% & 0.298 & 0.296 & 0.299 & 0.302 & 90.96\% & 90.90\% & 90.90\% & 91.02\%\\
 \bottomrule
 \end{tabular}} \textbackslash end\{table\}
 
