--- a/main_file.tex
+++ b/main_file.tex
@@ -291,7 +291,7 @@ The results are presented in tables and figures. In Figure \ref{fig:ppl0.3}, ave
 
 \begin{figure}[h]
 \centering
-\includegraphics{linear-norm-plot_files/figure-latex/ppl0.3-1.pdf}
+\includegraphics{ppl0.3-1.pdf}
 \caption{Percentage profit loss vs. data size at 0.3 target service level}
 \label{fig:ppl0.3}
 \end{figure}
@@ -300,7 +300,7 @@ In Figure \ref{fig:sl0.3}, every points represent the proportion of iterations t
 
 \begin{figure}[h]
 \centering
-\includegraphics{linear-norm-plot_files/figure-latex/sl-3.pdf}
+\includegraphics{sl-3.pdf}
 \caption{Service level vs. data size at 0.3 target service level}
 \label{fig:sl0.3}
 \end{figure}
