--- a/linear-norm-plot.tex
+++ b/linear-norm-plot.tex
@@ -165,7 +165,7 @@ Target service level & DGP & disjoint & quantile & proposed\\
 \centering \resizebox{\linewidth}{!}{
 \begin{tabular}[t]{ccccccccccccc}
 \toprule
-\multicolumn{1}{c}{\textbf{ }} & \multicolumn{4}{c}{\textbf{Percentage profit loss}} & \multicolumn{4}{c}{\textbf{Average service level}} & \multicolumn{4}{c}{\textbf{Fill rate}} \\
+\multicolumn{1}{c}{\textbf{ }} & \multicolumn{4}{c}{\textbf{Percentage profit loss}} & \multicolumn{4}{c}{\textbf{Service level}} & \multicolumn{4}{c}{\textbf{Fill rate}} \\
 \cmidrule(l{3pt}r{3pt}){2-5} \cmidrule(l{3pt}r{3pt}){6-9} \cmidrule(l{3pt}r{3pt}){10-13}
 Data size & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed\\
 \midrule
@@ -184,13 +184,13 @@ Data size & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & p
 \resizebox{\linewidth}{!}{
 \begin{tabular}[t]{ccccccccc}
 \toprule
-\multicolumn{1}{c}{\textbf{ }} & \multicolumn{4}{c}{\textbf{Percentage profit loss}} & \multicolumn{4}{c}{\textbf{Average service level}} \\
+\multicolumn{1}{c}{\textbf{ }} & \multicolumn{4}{c}{\textbf{Percentage profit loss}} & \multicolumn{4}{c}{\textbf{Service level}} \\
 \cmidrule(l{3pt}r{3pt}){2-5} \cmidrule(l{3pt}r{3pt}){6-9}
 Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed\\
 \midrule
-\rowcolor{gray!6}  0.5 & 2.37\% & 2.74\% & 2.74\% & 2.66\% & 0.500 & 0.395 & 0.502 & 0.500\\
-0.63 & 7.14\% & 7.63\% & 7.79\% & 7.53\% & 0.741 & 0.562 & 0.594 & 0.599\\
-\rowcolor{gray!6}  0.3 & 2.66\% & 2.98\% & 2.90\% & 2.80\% & 0.153 & 0.178 & 0.327 & 0.335\\
+\rowcolor{gray!6}  0.5 & 2.4\% & 2.7\% & 2.7\% & 2.7\% & 0.50 & 0.39 & 0.50 & 0.50\\
+0.63 & 7.1\% & 7.6\% & 7.8\% & 7.5\% & 0.74 & 0.56 & 0.59 & 0.60\\
+\rowcolor{gray!6}  0.3 & 2.7\% & 3.0\% & 2.9\% & 2.8\% & 0.15 & 0.18 & 0.33 & 0.34\\
 \bottomrule
 \end{tabular}}
 \end{table}
@@ -202,13 +202,13 @@ Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & q
 \resizebox{\linewidth}{!}{
 \begin{tabular}[t]{ccccccccc}
 \toprule
-\multicolumn{1}{c}{\textbf{ }} & \multicolumn{4}{c}{\textbf{Percentage profit loss}} & \multicolumn{4}{c}{\textbf{Average service level}} \\
+\multicolumn{1}{c}{\textbf{ }} & \multicolumn{4}{c}{\textbf{Percentage profit loss}} & \multicolumn{4}{c}{\textbf{Service level}} \\
 \cmidrule(l{3pt}r{3pt}){2-5} \cmidrule(l{3pt}r{3pt}){6-9}
 Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed\\
 \midrule
-\rowcolor{gray!6}  0.5 & 2.34\% & 2.55\% & 2.39\% & 2.39\% & 0.501 & 0.492 & 0.498 & 0.497\\
-0.63 & 6.65\% & 7.17\% & 6.77\% & 6.76\% & 0.648 & 0.631 & 0.635 & 0.634\\
-\rowcolor{gray!6}  0.3 & 2.47\% & 2.68\% & 2.54\% & 2.53\% & 0.285 & 0.292 & 0.307 & 0.306\\
+\rowcolor{gray!6}  0.5 & 2.3\% & 2.5\% & 2.4\% & 2.4\% & 0.50 & 0.49 & 0.50 & 0.50\\
+0.63 & 6.6\% & 7.2\% & 6.8\% & 6.8\% & 0.65 & 0.63 & 0.64 & 0.63\\
+\rowcolor{gray!6}  0.3 & 2.5\% & 2.7\% & 2.5\% & 2.5\% & 0.29 & 0.29 & 0.31 & 0.31\\
 \bottomrule
 \end{tabular}}
 \end{table}
@@ -220,13 +220,13 @@ Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & q
 \resizebox{\linewidth}{!}{
 \begin{tabular}[t]{ccccccccc}
 \toprule
-\multicolumn{1}{c}{\textbf{ }} & \multicolumn{4}{c}{\textbf{Percentage profit loss}} & \multicolumn{4}{c}{\textbf{Average service level}} \\
+\multicolumn{1}{c}{\textbf{ }} & \multicolumn{4}{c}{\textbf{Percentage profit loss}} & \multicolumn{4}{c}{\textbf{Service level}} \\
 \cmidrule(l{3pt}r{3pt}){2-5} \cmidrule(l{3pt}r{3pt}){6-9}
 Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed\\
 \midrule
-\rowcolor{gray!6}  0.5 & 2.36\% & 2.37\% & 2.39\% & 2.39\% & 0.506 & 0.505 & 0.507 & 0.508\\
-0.63 & 6.69\% & 6.70\% & 6.77\% & 6.76\% & 0.639 & 0.636 & 0.639 & 0.639\\
-\rowcolor{gray!6}  0.3 & 2.48\% & 2.48\% & 2.51\% & 2.52\% & 0.300 & 0.300 & 0.302 & 0.301\\
+\rowcolor{gray!6}  0.5 & 2.4\% & 2.4\% & 2.4\% & 2.4\% & 0.51 & 0.50 & 0.51 & 0.51\\
+0.63 & 6.7\% & 6.7\% & 6.8\% & 6.8\% & 0.64 & 0.64 & 0.64 & 0.64\\
+\rowcolor{gray!6}  0.3 & 2.5\% & 2.5\% & 2.5\% & 2.5\% & 0.30 & 0.30 & 0.30 & 0.30\\
 \bottomrule
 \end{tabular}}
 \end{table}
