--- a/main_file.tex
+++ b/main_file.tex
@@ -270,7 +270,7 @@ In the case of NVP, the proposed estimator has following useful statistical prop
 
 \subsection{Simulation design}
 
-In this section, we conduct the simulation experiment in order to demonstrate the performance of the proposed method. The data are simulated from ARIMA $(1,0,0)(1,0,0)_4$ with $\theta=0.3,\Theta=0.5$ and constant level $=500$. The simulation will be performed base on 20,000 iterations. We consider the simplest scenario in the beginning, where the underlying profit function is linear, the error term of the demand follows normal distribution $U(0,200^2)$, and we know the model of the data generating process. Specifically, we consider three profit functions \footnote{
+In this section, we conduct the simulation experiment in order to demonstrate the performance of the proposed method. The data are simulated from ARIMA $(1,0,0)(1,0,0)_4$ with $\theta=0.3,\Theta=0.5$ and constant level $=500$. The simulation will be performed base on 20,000 iterations. We consider the simplest scenario in the beginning, where the underlying profit function is linear, the error term of the demand follows normal distribution $\mathcal{N}(0,200^2)$, and we know the model of the data generating process. Specifically, we consider three profit functions \footnote{
 The parameters of three profit functions are:
 \begin{enumerate}
     \item $p=20$, $v=8$, $c_h=-3$, $c_s=-7$
@@ -372,13 +372,13 @@ Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & q
 \end{table}
 
 \subsection{Nonlinear profit function}
-In this subsection, we consider the simulation where, as before, the error term of the demand follows normal distribution, and we know the model of the data generating process, but the underlying profit function is nonlinear\footnote{$
+In this subsection, we consider the simulation where, as before, the error term of the demand follows normal distribution, and the model of the data generating process is known, but the underlying profit function is nonlinear\footnote{$
         \pi(Q,y)=
         \begin{cases}
             20y-8Q-4(Q-y)+5\E[\min \{(Q-y),u\}],& \text{if } Q\geq y\\
-            20Q-8Q-7(y-Q)^2,& \text{if } Q< y,
-        \end{cases}$ and $u\sim \mathcal{U}(0,50)$} (solution see \cite{KK18}). 
-In this experiment, we pay specific attention to the percentage profit loss, and we explore how the performance changes on both the proposed method and the disjoint method when we alter the profit function to nonlinear. The data will still be generated from ARIMA process, and the five data lengths are maintained. The results can be seen in 
+            20Q-8Q-0.01(y-Q)^2,& \text{if } Q< y,
+        \end{cases}$ and $u\sim \mathcal{N}(30,5^2)$} (solution see \cite{KK18}).
+In this experiment, we pay specific attention to the percentage profit loss, and we explore how the performance changes on both the proposed method and the disjoint method when we alter the profit function to nonlinear. The data will still be generated from ARIMA process. The results can be seen in 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Concluding Remarks} \label{se:end}
