--- a/main_file.tex
+++ b/main_file.tex
@@ -393,14 +393,16 @@ In this subsection, we consider the performance of our proposed method, compares
 
 
 \subsection{Nonlinear profit function}
-In this subsection, we consider the simulation where, as before, the error term of the demand follows normal distribution, and the model of the data generating process is known, but the underlying profit function is nonlinear\footnote{$
+In this subsection, we consider the scenario where the error term of the demand follows normal distribution, and the model of the data generating process is known, but the underlying profit function is nonlinear\footnote{$
         \pi(Q,y)=
         \begin{cases}
             20y-8Q-4(Q-y)+5\E[\min \{(Q-y),u\}],& \text{if } Q\geq y\\
             20Q-8Q-0.01(y-Q)^2,& \text{if } Q< y,
         \end{cases}$ and $u\sim \mathcal{N}(30,5^2)$} (solution see \cite{KK18}).
-In this experiment, we pay specific attention to the percentage profit loss, and we explore how the performance changes on both the proposed method and the disjoint method when we alter the profit function to nonlinear. The data will still be generated from ARIMA process. The results can be seen in 
+In this experiment, we explore how the performance changes on both the proposed method and the disjoint method when we alter the profit function to nonlinear. Both the percentage profit loss and the service level will be concerned. The data will still be generated from ARIMA $(1,0,0)(1,0,0)_4$ process, and we use the performance of DGP to compare with both methods. 
 
+\subsection{Error term misspecification}
+In this subsection, we are interested in explore the behavior of out proposed method in the scenario where the error term is misspecified. Particularly, we generate our data from ARIMA $(1,0,0)(1,0,0)_4$ with error term follows Laplace$(0,141)$. In the experiment, we assume that the model of the data generating process is known, and the underlying profit function is linear where $p=20$, $v=10$, $c_h=-3$, $c_s=-7$. However, we fail to know the true distribution of the error term, and still assume it follows normal distribution $\mathcal{N}(0,200^2)$.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Concluding Remarks} \label{se:end}
 
