--- a/main_file.tex
+++ b/main_file.tex
@@ -288,7 +288,6 @@ In the experiment, we use seasonal dummies and lag term 1 and 4 as explanatory v
 \end{itemize}
 Moreover, we use the exact model and parameters from data generating process to be our upper bound. We build the proposed method and benchmark methods based on the given data set, and compare their performance on the $1$-step ahead forecast. The comparison of performance includes:
 \begin{enumerate}
-    \item Inventory Error  ($IE=\hat{Q}_{s+1}-y_{s+1}$),
     \item Percentage Profit Loss ($PPL=\frac{\pi(y_{s+1},y_{s+1})-\pi(\hat{Q}_{s+1},y_{s+1})}{\pi(y_{s+1},y_{s+1})}$),
     \item Service Level ($SL=\mathbb {I}_{(\hat{Q}_{s+1}>y_{s+1})}$),
     \item Fill Rate ($FR=\frac{\min\{\hat{Q}_{s+1},y_{s+1}\}}{y_{s+1}}$).
@@ -399,7 +398,7 @@ In this subsection, we consider the scenario where the error term of the demand 
             20y-8Q-4(Q-y)+5\E[\min \{(Q-y),u\}],& \text{if } Q\geq y\\
             20Q-8Q-0.01(y-Q)^2,& \text{if } Q< y,
         \end{cases}$ and $u\sim \mathcal{N}(30,5^2)$} (solution see \cite{KK18}).
-In this experiment, we explore how the performance changes on both the proposed method and the disjoint method when we alter the profit function to nonlinear. Both the percentage profit loss and the service level will be concerned. The data will still be generated from ARIMA $(1,0,0)(1,0,0)_4$ process, and we use the performance of DGP to compare with both methods. 
+In this experiment, we explore how the performance changes on both the proposed method and the disjoint method when we alter the profit function to nonlinear. The disjoint method will still be operated in two phases. Mean and variance of the demand will be forecasted in the first phase, and a simulation algorithm will be used in order to generate the optimal quantile solution of the profit function in the second phase. Specifically, we conduct simulation on three different demand distribution each with 50,000 iterations and approximate the numerical quantile solution (target service level) of the nonlinear profit function to be 0.58. In the experiment, both the percentage profit loss and the service level will be concerned. The data will still be generated from ARIMA $(1,0,0)(1,0,0)_4$ process, and we use the performance of DGP to compare with both methods. 
 
 \subsection{Error term misspecification}
 In this subsection, we are interested in explore the behavior of out proposed method in the scenario where the error term is misspecified. Particularly, we generate our data from ARIMA $(1,0,0)(1,0,0)_4$ with error term follows Laplace$(0,141)$. In the experiment, we assume that the model of the data generating process is known, and the underlying profit function is linear where $p=20$, $v=10$, $c_h=-3$, $c_s=-7$. However, we fail to know the true distribution of the error term, and still assume it follows normal distribution $\mathcal{N}(0,200^2)$.
