--- a/main_file.tex
+++ b/main_file.tex
@@ -404,9 +404,9 @@ In this scenario, we explore how the performance changes on both the proposed me
 In this subsection, we are interested in explore the behavior of our proposed method in the scenario where the error term is misspecified. Particularly, we generate our data from ARIMA $(1,0,0)(1,0,0)_4$ with error term follows Laplace$(0,141)$. Therefore, the mean and variance will be as same as $\mathcal{N}(0,200^2)$. As before, we assume that the model of the data generating process is known, and the underlying profit function is linear where $p=20$, $v=10$, $c_h=-3$, $c_s=-7$. However, we fail to know the true distribution of the error term, and still assume it follows normal distribution $\mathcal{N}(0,200^2)$.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Concluding Remarks} \label{se:end}
+This paper presents the framework of a new integrated approach to NVPs. The method is flexible, and doesn't make assumptions about demand distribution. Therefore, it could generate stable outcomes even in the case we possess misleading information or make wrong assumptions.
 
-BLAH...
-
+We illustrate and compare the proposed method in computational experiments. The results are sorted in one simple scenario and three extensions. As expected, the proposed method can achieve same level of performance in classic NVPs, while provides marvelous results when the scenario become complicated. 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \printbibliography
 
