--- a/main_file.tex
+++ b/main_file.tex
@@ -406,7 +406,9 @@ In this subsection, we are interested in explore the behavior of our proposed me
 \section{Concluding Remarks} \label{se:end}
 This paper presents the framework of a new integrated approach to NVPs. The method is flexible, and doesn't make assumptions about demand distribution. Therefore, it could generate stable outcomes even in the case we possess misleading information or make wrong assumptions.
 
-We illustrate and compare the proposed method in computational experiments. The results are sorted in one simple scenario and three extensions. As expected, the proposed method can achieve same level of performance in classic NVPs, while provides marvelous results when the scenario become complicated. 
+We illustrate and compare the proposed method in computational experiments. As expected, the proposed method can achieve as same level of performance as disjoint method in classic NVPs, while provides marvelous results when the scenario become complicated. The results of experiment also backup our proof on the transformation property between proposed method and quantile regression in the linear profit function case. Besides, the proposed method behaves well in the nonlinear profit function case where the quantile regression is no longer functional.
+
+For future research, more scenarios of experiment should be considered and tested 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \printbibliography
 
