--- a/nonlinear plot.Rmd
+++ b/nonlinear plot.Rmd
@@ -2,7 +2,9 @@
 title: "nonlinear plot"
 author: "Joshua"
 date: "24/05/2020"
-output: pdf_document
+output: 
+  pdf_document:
+    keep_tex: true
 ---
 
 ```{r setup, include=TRUE}
