--- a/main_file.tex
+++ b/main_file.tex
@@ -361,14 +361,14 @@ In this scenario, we explore how the performance changes on both the proposed me
 \caption{Performance vs. data size with nonlinear profit function}
 \begin{subfigure}[b]{0.48\textwidth}
 \centering
-\includegraphics[width=\textwidth]{}
-\caption{}
+\includegraphics[width=\textwidth]{nonlinear-plot_files/figure-latex/ppl-1.pdf}
+\caption{percentage profit loss vs. data size}
 \end{subfigure}
 \hfill
 \begin{subfigure}[b]{0.48\textwidth}
 \centering
-\includegraphics[width=\textwidth]{}
-\caption{}
+\includegraphics[width=\textwidth]{nonlinear-plot_files/figure-latex/sl-1.pdf}
+\caption{service level vs. data size}
 \end{subfigure}
 \label{fig:non}
 \end{figure}
