--- a/nonlinear plot.Rmd
+++ b/nonlinear plot.Rmd
@@ -61,9 +61,11 @@ plot.new()
 l <- legend(0, 0, bty='n',c("DGP", "DJ","CF"),plot=FALSE, pch=1:3,col=1:3)
 w <- grconvertX(l$rect$w, to='ndc') - grconvertX(0, to='ndc')
 par(omd=c(0, 1-w, 0, 1))
-matplot(mac, type = c("b"),pch=1:3,col = 1:3,xaxt = "n"
-        ,xlab = 'data length',ylab = 'percetage profit loss') 
+matplot(mac, type = c("b"),pch=1:3,col = 1:3,xaxt = "n",yaxt = "n"
+        ,xlab = 'data length',ylab = '') 
+title(ylab = 'percetage profit loss',line=3.3, cex.lab=1.2)
 axis(1, at=1:5, labels=x_axis)
+axis(2, at=pretty(y_axis), lab=paste0(pretty(y_axis) * 100, "%"), las=TRUE)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
        ,c("DGP", "DJ","CF"), pch=1:3,col=1:3)
 
