--- a/main_file.tex
+++ b/main_file.tex
@@ -354,7 +354,9 @@ In this subsection, we consider the scenario where the error term of the demand 
             20y-8Q-4(Q-y)+5\E[\min \{(Q-y),u\}],& \text{if } Q\geq y\\
             20Q-8Q-0.01(y-Q)^2,& \text{if } Q< y,
         \end{cases}$ and $u\sim \mathcal{N}(30,5^2)$} (solution see \cite{KK18}).
-In this scenario, we explore how the performance changes on both the proposed method and the disjoint method when we alter the profit function to nonlinear. We don't have to make any change to the proposed method, since it makes no assumption to the solution of profit function. However, few amendment are required for the disjoint method. The disjoint method will still be operated in two phases. Mean and variance of the demand will be forecasted in the first phase, and a simulation algorithm will be used in order to generate the optimal quantile solution of the profit function in the second phase. Specifically, we conduct simulation on three different demand distribution each with 50,000 iterations and finally approximate the numerical quantile solution (target service level) of the nonlinear profit function to be 0.56. In the experiment, both the percentage profit loss and the service level will be concerned. The data will still be generated from ARIMA $(1,0,0)(1,0,0)_4$ process, and we use the performance of DGP to compare with both methods.
+In this scenario, we explore how the performance changes on both the proposed method and the disjoint method when we alter the profit function to nonlinear. We don't have to make any change to the proposed method, since it makes no assumption to the solution of profit function. However, a simulation algorithm will be used in order to generate the optimal quantile solution of the profit function for the disjoint method. The disjoint method will still be operated in two phases. Mean and variance of the demand will be forecasted in the first phase, and the approximated quantile 0.56 will be used to generate the optimal quantity in the second phase. In the experiment, both the percentage profit loss and the service level will be concerned. The data will still be generated from ARIMA $(1,0,0)(1,0,0)_4$ process, and we use the performance of DGP to compare with both methods. 
+
+The results can be seen in Figure \ref{fig:non}. We can see that the percentage profit loss of the proposed method is very similar to that of the disjoint method in every data size. Regarding to the service level, the proposed method can easily approach the target service level when the data size is small, while the disjoint method needs more data to reach the target service level. Moreover, the proposed method doesn't need any numerical methods or simulation methods to solve for the optimal quantile solution of the profit function. Therefore, it generally requires less computational time.
 
 \begin{figure}[ht]
 \centering
