--- a/nonlinear-plot.tex
+++ b/nonlinear-plot.tex
@@ -99,6 +99,20 @@
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 \setcounter{secnumdepth}{-\maxdimen} % remove section numbering
+\usepackage{booktabs}
+\usepackage{longtable}
+\usepackage{array}
+\usepackage{multirow}
+\usepackage{wrapfig}
+\usepackage{float}
+\usepackage{colortbl}
+\usepackage{pdflscape}
+\usepackage{tabu}
+\usepackage{threeparttable}
+\usepackage{threeparttablex}
+\usepackage[normalem]{ulem}
+\usepackage{makecell}
+\usepackage{xcolor}
 
 \title{nonlinear plot}
 \author{Joshua}
@@ -111,6 +125,26 @@
 \begin{Highlighting}[]
 \NormalTok{knitr}\OperatorTok{::}\NormalTok{opts_chunk}\OperatorTok{$}\KeywordTok{set}\NormalTok{(}\DataTypeTok{echo =}\NormalTok{ F)}
 \KeywordTok{rm}\NormalTok{(}\DataTypeTok{list=}\KeywordTok{ls}\NormalTok{())}
+\KeywordTok{library}\NormalTok{(}\StringTok{'knitr'}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## Warning: package 'knitr' was built under R version 3.5.2
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(}\StringTok{'kableExtra'}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## Warning: package 'kableExtra' was built under R version 3.5.2
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
 \KeywordTok{library}\NormalTok{(}\StringTok{'forecast'}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
@@ -150,6 +184,7 @@
 \KeywordTok{library}\NormalTok{(}\StringTok{'beanplot'}\NormalTok{)}
 \KeywordTok{library}\NormalTok{(}\StringTok{'pastecs'}\NormalTok{)}
 \KeywordTok{library}\NormalTok{(}\StringTok{'scales'}\NormalTok{)}
+\KeywordTok{library}\NormalTok{(}\StringTok{'rbenchmark'}\NormalTok{)}
 \KeywordTok{library}\NormalTok{(}\StringTok{'ggplot2'}\NormalTok{)}
 
 \KeywordTok{load}\NormalTok{(}\StringTok{'nonlinear.Rdata'}\NormalTok{)}
@@ -162,5 +197,20 @@
 \includegraphics{nonlinear-plot_files/figure-latex/ppl-1.pdf}
 
 \includegraphics{nonlinear-plot_files/figure-latex/sl-1.pdf}
+
+\begin{table}
+
+\caption{\label{tab:runtime}Computation time}
+\centering
+\resizebox{\linewidth}{!}{
+\begin{tabular}[t]{cccccc}
+\toprule
+ & 40 & 120 & 480 & 1200 & 4800\\
+\midrule
+disjoint & 3.7298 & 3.7307 & 3.7870 & 3.8162 & 4.2786\\
+proposed & 0.8506 & 0.9864 & 1.8003 & 4.2808 & 19.9372\\
+\bottomrule
+\end{tabular}}
+\end{table}
 
 \end{document}
