--- a/nonlinear plot.Rmd
+++ b/nonlinear plot.Rmd
@@ -113,207 +113,9 @@ w <- grconvertX(l$rect$w, to='ndc') - grconvertX(0, to='ndc')
 par(omd=c(0, 1-w, 0, 1))
 matplot(mac, type = c("b"),pch=1:3,col = 1:3,xaxt = "n"
         ,xlab = 'data length',ylab = 'service level') 
+abline(h=0.56,lty=2,col='black')
 axis(1, at=1:5, labels=x_axis)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
        ,c("DGP", "DJ","CF"), pch=1:3,col=1:3)
 
 ```
-
-```{r runtime}
-arima_series<-sim.ssarima(frequency=4,orders=list(ar=c(1,1)),lags = c(1,4),AR=c(0.3,0.5),obs = 5001,nsim=1,constant=500,mean=0,sd=200)$data
-
-profit_function_nonlinear<-function(order,demand){
-  profit<-(order>=demand)*(24*demand-12*order+5*min((order-demand),rnorm(1,30,5)))+(order<demand)*(12*order-0.01*(demand-order)^2)
-  return(profit)
-}
-
-requan<-0.56
-
-test_length=1
-
-mini_nonlinear<-function(data,par){
-  order<-par[1]+par[2]*data[,2]+par[3]*data[,3]+par[4]*data[,4]+par[5]*data[,5]+par[6]*data[,6]
-  total_profit<-sum(apply(cbind(order,data[,1]),1,function(x) profit_function_nonlinear(x[1],x[2])))
-  return(-total_profit)
-}
-
-bnon<-benchmark(
-'non'={
-order<-seq(-600,600,1)
-quan_list<-c()
-for (k in 1:50){
-  list<-c()
-  quan<-0
-  for (i in order){
-    precord<-0
-    meanprofit<-0
-    for (j in 1:100){
-      de<-rnorm(1,0,200)
-      profit<-profit_function_nonlinear(i,de)
-      precord<-precord+profit
-    }
-    meanprofit<-precord/1000
-    list<-c(list,meanprofit)
-  }
-  quan<-which.max(list)/length(order)
-  quan_list<-c(quan_list,quan)
-}
-requan<-mean(quan_list)
-}
-,replications = 1,columns = c("test", "replications", "elapsed","relative", "user.self", "sys.self"))
-
-#40
-data<-ts(arima_series[201:240],frequency=4)
-
-length<-length(data)
-test<-ts(data[5:length],frequency=4)
-rep<-length/4
-s1<-rep(c(1,0,0,0),rep)
-s2<-rep(c(0,1,0,0),rep)
-s3<-rep(c(0,0,1,0),rep)
-L1_data=lag(data,-1)
-L4_data=lag(data,-4)
-set_data=cbind(data,s1,s2,s3)
-set_data=cbind(set_data,L1_data,L4_data)
-colnames(set_data)<-c('data','s1','s2','s3','L1','L4')
-set_data=ts(set_data[5:length,])
-
-b40<-benchmark(
-'dj'={
-arima_p<-ssarima(test,frequency=4,orders=list(ar=c(1,1)),lags = c(1,4),constant=TRUE)
-}
-,'cf'={
-coe<-lm(data ~., data=set_data)$coefficients
-cf_n_par<-optim(par = coe, fn = mini_nonlinear,method = 'L-BFGS-B', data = set_data)$par
-}
-,replications = 10,columns = c("test", "replications", "elapsed","relative", "user.self", "sys.self"))
-cf_40<-b40[1,3]/10
-dj_40<-b40[2,3]/10+bnon[1,3]/10
-r_40<-c(dj_40,cf_40)
-
-#120
-data<-ts(arima_series[201:320],frequency=4)
-
-length<-length(data)
-test<-ts(data[5:length],frequency=4)
-rep<-length/4
-s1<-rep(c(1,0,0,0),rep)
-s2<-rep(c(0,1,0,0),rep)
-s3<-rep(c(0,0,1,0),rep)
-L1_data=lag(data,-1)
-L4_data=lag(data,-4)
-set_data=cbind(data,s1,s2,s3)
-set_data=cbind(set_data,L1_data,L4_data)
-colnames(set_data)<-c('data','s1','s2','s3','L1','L4')
-set_data=ts(set_data[5:length,])
-
-b120<-benchmark(
-'dj'={
-arima_p<-ssarima(test,frequency=4,orders=list(ar=c(1,1)),lags = c(1,4),constant=TRUE)
-}
-,'cf'={
-coe<-lm(data ~., data=set_data)$coefficients
-cf_n_par<-optim(par = coe, fn = mini_nonlinear,method = 'L-BFGS-B', data = set_data)$par
-}
-,replications = 10,columns = c("test", "replications", "elapsed","relative", "user.self", "sys.self"))
-cf_120<-b120[1,3]/10
-dj_120<-b120[2,3]/10+bnon[1,3]/10
-r_120<-c(dj_120,cf_120)
-
-#480
-data<-ts(arima_series[201:680],frequency=4)
-
-length<-length(data)
-test<-ts(data[5:length],frequency=4)
-rep<-length/4
-s1<-rep(c(1,0,0,0),rep)
-s2<-rep(c(0,1,0,0),rep)
-s3<-rep(c(0,0,1,0),rep)
-L1_data=lag(data,-1)
-L4_data=lag(data,-4)
-set_data=cbind(data,s1,s2,s3)
-set_data=cbind(set_data,L1_data,L4_data)
-colnames(set_data)<-c('data','s1','s2','s3','L1','L4')
-set_data=ts(set_data[5:length,])
-
-b480<-benchmark(
-'dj'={
-arima_p<-ssarima(test,frequency=4,orders=list(ar=c(1,1)),lags = c(1,4),constant=TRUE)
-}
-,'cf'={
-coe<-lm(data ~., data=set_data)$coefficients
-cf_n_par<-optim(par = coe, fn = mini_nonlinear,method = 'L-BFGS-B', data = set_data)$par
-}
-,replications = 10,columns = c("test", "replications", "elapsed","relative", "user.self", "sys.self"))
-cf_480<-b480[1,3]/10
-dj_480<-b480[2,3]/10+bnon[1,3]/10
-r_480<-c(dj_480,cf_480)
-
-#1200
-data<-ts(arima_series[201:1400],frequency=4)
-
-length<-length(data)
-test<-ts(data[5:length],frequency=4)
-rep<-length/4
-s1<-rep(c(1,0,0,0),rep)
-s2<-rep(c(0,1,0,0),rep)
-s3<-rep(c(0,0,1,0),rep)
-L1_data=lag(data,-1)
-L4_data=lag(data,-4)
-set_data=cbind(data,s1,s2,s3)
-set_data=cbind(set_data,L1_data,L4_data)
-colnames(set_data)<-c('data','s1','s2','s3','L1','L4')
-set_data=ts(set_data[5:length,])
-
-b1200<-benchmark(
-'dj'={
-arima_p<-ssarima(test,frequency=4,orders=list(ar=c(1,1)),lags = c(1,4),constant=TRUE)
-}
-,'cf'={
-coe<-lm(data ~., data=set_data)$coefficients
-cf_n_par<-optim(par = coe, fn = mini_nonlinear,method = 'L-BFGS-B', data = set_data)$par
-}
-,replications = 10,columns = c("test", "replications", "elapsed","relative", "user.self", "sys.self"))
-cf_1200<-b1200[1,3]/10
-dj_1200<-b1200[2,3]/10+bnon[1,3]/10
-r_1200<-c(dj_1200,cf_1200)
-
-#4800
-data<-ts(arima_series[201:5000],frequency=4)
-
-length<-length(data)
-test<-ts(data[5:length],frequency=4)
-rep<-length/4
-s1<-rep(c(1,0,0,0),rep)
-s2<-rep(c(0,1,0,0),rep)
-s3<-rep(c(0,0,1,0),rep)
-L1_data=lag(data,-1)
-L4_data=lag(data,-4)
-set_data=cbind(data,s1,s2,s3)
-set_data=cbind(set_data,L1_data,L4_data)
-colnames(set_data)<-c('data','s1','s2','s3','L1','L4')
-set_data=ts(set_data[5:length,])
-
-b4800<-benchmark(
-'dj'={
-arima_p<-ssarima(test,frequency=4,orders=list(ar=c(1,1)),lags = c(1,4),constant=TRUE)
-}
-,'cf'={
-coe<-lm(data ~., data=set_data)$coefficients
-cf_n_par<-optim(par = coe, fn = mini_nonlinear,method = 'L-BFGS-B', data = set_data)$par
-}
-,replications = 10,columns = c("test", "replications", "elapsed","relative", "user.self", "sys.self"))
-cf_4800<-b4800[1,3]/10
-dj_4800<-b4800[2,3]/10+bnon[1,3]/10
-r_4800<-c(dj_4800,cf_4800)
-set<-data.frame(c('disjoint','proposed')
-               ,r_40,r_120,r_480,r_1200,r_4800)
-colnames(set)<-c('','40','120','480','1200','4800')
-kable(set,format='latex', booktabs = T,caption = 'Computation time',align = 'c') %>% 
-        kable_styling(latex_options =  "scale_down")
-```
-
-
-
-
-
