--- a/main_file.tex
+++ b/main_file.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
-\usepackage[legalpaper, textwidth=450pt]{geometry}
 \usepackage{amsmath,amssymb}
+\usepackage[a4paper,textwidth=450pt]{geometry}
 \DeclareMathOperator{\E}{\mathbb{E}}
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
@@ -31,7 +31,7 @@ Lancaster University, Lancaster LA1 4YX, UK.
 Email: {\tt \{c.liu19,a.n.letchford,i.svetunkov\}@lancaster.ac.uk}}
 \and Adam N.\ Letchford$^*$ \and Ivan Svetunkov$^*$} % end author list
 
-\date{Draft, 13th June 2020}
+\date{Draft, 17th June 2020}
 
 \begin{document}
 
@@ -226,30 +226,28 @@ normality \cite{KHM05}.
 
 \subsection{Simulation design}
 
-In this section, we conduct the simulation experiment in order to demonstrate the performance of the proposed method. The data are simulated from ARIMA $(1,0,0)(1,0,0)_4$ with $\theta=0.3,\Theta=0.5$ and constant level $=500$. The simulation will be performed base on 20,000 iterations. We consider the simplest scenario in the beginning, where the underlying profit function is linear, the error term of the demand follows normal distribution $\mathcal{N}(0,200^2)$, and we know the model of the data generating process. Specifically, we consider three profit functions \footnote{
+In this section, we conduct the simulation experiment in order to demonstrate the performance of the proposed method. The data are simulated from ARIMA $(1,0,0)(1,0,0)_4$ with $\theta=0.3,\Theta=0.5$ and constant level $=500$. The simulation will be performed on 20,000 iterations. We consider the simplest scenario in the beginning, where the underlying profit function is linear, the error term of the data generating process (DGP) follows normal distribution $\mathcal{N}(0,200^2)$, and we know the model of DGP. Specifically, we consider three profit functions \footnote{
 The parameters of three profit functions are:
 \begin{enumerate}
     \item $p=20$, $v=8$, $c_h=-3$, $c_s=-7$
     \item $p=20$, $v=8$, $c_h=3$, $c_s=7$
     \item $p=20$, $v=10$, $c_h=-3$, $c_s=-7$
 \end{enumerate}
-} whose optimal order solutions denote three different target service levels (0.5, 0.63 and 0.3).
-
-To further explore the method, we consider five data sizes (40,120,480,1200,4800) in order to see how the proposed method performs when the learning period varies.
+}, and five data sizes (40,120,480,1200,4800) in order to see how the proposed method performs when the target service level and/or the learning period varies.
 
 In the experiment, we use seasonal dummies and lag term 1 and 4 as explanatory variables for the proposed method. Besides, two benchmark methods are selected to compare performance with:
 \begin{itemize}
     \item Disjoint method that use ARIMA $(1,0,0)(1,0,0)_4$ to forecast in the first phase and determine the optimal quantile from the profit function in the second phase,
     \item Integrated method that use Quantile Regression with seasonal dummies and lag term 1 and 4 as explanatory variables.
 \end{itemize}
-Moreover, we use the results of the exact model and parameters from data generating process to be our upper bound. We build the proposed method and benchmark methods based on the given data set, and compare their performance on the $1$-step ahead forecast. The comparison of performance includes:
+Moreover, we use the results of the exact model and parameters from DGP to be our upper bound. We build the proposed method and benchmark methods based on the given data set, and compare their performance on the $1$-step ahead forecast. The comparison of performance includes:
 \begin{enumerate}
     \item Percentage Profit Loss ($PPL=\frac{\pi(y_{s+1},y_{s+1})-\pi(\hat{Q}_{s+1},y_{s+1})}{\pi(y_{s+1},y_{s+1})}$),
     \item Service Level ($SL=\mathbb {I}_{(\hat{Q}_{s+1}>y_{s+1})}$),
     \item Fill Rate ($FR=\frac{\min\{\hat{Q}_{s+1},y_{s+1}\}}{y_{s+1}}$).
 \end{enumerate}
 
-The results are presented in tables and figures. In Figure \ref{fig:ppl0.3}, average percentage profit loss are calculated based on iterations. Particularly, this figure represents the average performance of methods regarding to percentage profit loss in the situation where the target service level $=0.3$. DGP denotes the exact ARIMA model and parameters from data generating process, DJ denotes the disjoint method, QR denotes the quantile regression method, and CF denotes our proposed method. We can see both the proposed method and the benchmark methods converge to the upper bound when data size grows. Besides, the performance of our proposed method and quantile regression is very similar. This is exactly what we expected base on the transformation property we proved in Section \ref{se:new}. However, when the data size is small, the disjoint method performed slightly better than the quantile regression method and the proposed method. 
+The results are presented in tables and figures. Figure \ref{fig:ppl0.3} represents the average percentage profit loss of methods where target service level $=0.3$. DGP denotes the exact ARIMA model and parameters from data generating process, DJ denotes the disjoint method, QR denotes the quantile regression method, and CF denotes our proposed method. We can see both the proposed method and the benchmark methods converge to DGP when data size grows. Besides, the performance of our proposed method and quantile regression is very similar. This is exactly what we expected base on the transformation property we proved in Section \ref{se:new}. However, when the data size is small, the disjoint method performed slightly better than the quantile regression method and the proposed method. 
 
 \begin{figure}[ht]
 \centering
@@ -347,7 +345,7 @@ In this subsection, we consider the performance of our proposed method, compared
 \end{figure}
 
 
-\subsection{Nonlinear profit function}
+\subsection{Complex profit function}
 In this subsection, we consider the scenario where the error term of the demand follows normal distribution, and the model of the data generating process is known, but the underlying profit function is nonlinear\footnote{$
         \pi(Q,y)=
         \begin{cases}
